	handler/ha_innodb.h, include/dict0dict.h, include/dict0mem.h,
	row/row0mysql.c:
	Fix Bug#39830 Table autoinc value not updated on first insert
	Fix Bug#35498 Cannot get table test/table1 auto-inccounter value in
	::info
	Fix Bug#36411 "Failed to read auto-increment value from storage
	engine" in 5.1.24 auto-inc

2008-10-22	The InnoDB Team

	* handler/ha_innodb.cc, include/row0mysql.h, row/row0mysql.c:
	Fix Bug#40224 New AUTOINC changes mask reporting of deadlock/timeout
	errors

2008-10-16	The InnoDB Team

	* dict/dict0dict.c, mysql-test/innodb-index.result,
	mysql-test/innodb-index.test:
	Skip the undo log size check when creating REDUNDANT and COMPACT
	tables. In ROW_FORMAT=DYNAMIC and ROW_FORMAT=COMPRESSED, column
	prefix indexes require that prefixes of externally stored columns
	be written to the undo log. This may make the undo log record
	bigger than the record on the B-tree page. The maximum size of an
	undo log record is the page size. That must be checked for, in
	dict_index_add_to_cache(). However, this restriction must not
	be enforced on REDUNDANT or COMPACT tables.

2008-10-15	The InnoDB Team

	* btr/btr0cur.c, include/btr0cur.h, row/row0ext.c, row/row0sel.c,
	row/row0upd.c:
	When the server crashes while freeing an externally stored column
	of a compressed table, the BTR_EXTERN_LEN field in the BLOB
	pointer will be written as 0. Tolerate this in the functions that
	deal with externally stored columns. This fixes problems after
	crash recovery, in the rollback of incomplete transactions, and in
	the purge of delete-marked records.

2008-10-15	The InnoDB Team

	* btr/btr0btr.c, include/page0zip.h, page/page0zip.c, include/univ.i:
	When a B-tree node of a compressed table is split or merged, the
	compression may fail. In this case, the entire compressed page
	will be copied and the excess records will be deleted. However,
	page_zip_copy(), now renamed to page_zip_copy_recs(), copied too