@@ -1039,6 +1039,12 @@
 
 2008-10-22	The InnoDB Team
 
+	* buf/buf0lru.c:
+	Fix Bug#35077 Very slow DROP TABLE (ALTER TABLE, OPTIMIZE TABLE)
+	on compressed tables
+
+2010-02-03	The InnoDB Team
+
 	* handler/ha_innodb.cc, include/row0mysql.h, row/row0mysql.c:
 	Fix Bug#40224 New AUTOINC changes mask reporting of deadlock/timeout
 	errors
